--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
             </div>
         </div>
     </div>
-            <div id="hero">
-                <div class="cta">
-                    <h1>Find Your</h1>
-                    <h1>Legendary Journey</h1>
-                    <p>Pick your favourite TTRPG campaign, roll a character and<br>delve into terra incogrnita</p>
-                    <br>
-                    <br>
-                    <br>
-                    <a href="#campaigns" class="explore">EXPLORE</a>
-                    <a href="#about" class="learn">Learn More</a>
-                </div>
-            </div>
+    <div id="hero">
+        <div class="cta">
+            <h1>Find Your</h1>
+            <h1>Legendary Journey</h1>
+            <p>Pick your favourite TTRPG campaign, roll a character and<br>delve into terra incogrnita</p>
+            <br>
+            <br>
+            <br>
+            <a href="#campaigns" class="explore">EXPLORE</a>
+            <a href="#about" class="learn">Learn More</a>
+        </div>
+    </div>
     <div class="middle">
         <div id="about">
             <div class="logo">
@@ -62,5 +62,99 @@
             </div>
         </div>
     </div>
+
+    <div id="campaigns">
+        <h3>&#9876;&#65039;Campaign&#9876;&#65039;</h3>
+        <div class="swiper campaign-slide">
+            <div class="swiper-wrapper">
+                <div id="arkemyr" class="swiper-slide slide-card">
+                    <div class="gradient"></div>
+                    <a href="">
+                        <span class="campaign-logo">
+                            <img src="img/arkemyr-logo.png" alt="The Lost Grimoire of Arkemyr">
+                        </span>
+                    </a>
+                </div>
+                <div id="bvale" class="swiper-slide slide-card">
+                    <div class="gradient"></div>
+                    <a href="">
+                        <span class="campaign-logo">
+                            <img src="img/bvale-logo.jpg" alt="Burning Vale">
+                        </span>
+                    </a>
+                </div>
+                <div id="leviathan" class="swiper-slide slide-card">
+                    <div class="gradient"></div>
+                    <a href="">
+                        <span class="campaign-logo">
+                            <img src="img/leviathan-logo.png" alt="Burning Vale">
+                        </span>
+                    </a>
+                </div>
+                <div id="tavern" class="swiper-slide slide-card">
+                    <div class="gradient"></div>
+                    <a href="">
+                        <span class="campaign-logo">
+                            <img src="img/dead-logo.png" alt="Dead or Alive">
+                        </span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="campaign-slide-nav">
+        <div class="slide-prev">
+            <i class="ri-arrow-left-line"></i> 
+        </div>
+        <div class="slide-next">
+            <i class="ri-arrow-right-line"></i>
+        </div>
+    </div>
+</div>
+
+<div id="newsletter">
+    <div class="newsletter-content">
+        <h3>Get regular updates from us!</h3>
+        <p>Enter your email below to get awesome updates about upcoming events,<br>new campaigns and many more</p>
+        <form action="">
+            <input type="text" placeholder="Email Adress">
+            <button>JOIN</button>
+        </form>
+    </div>
+</div>
+<div id="github">
+    <a href="https://github.com/datia-23/storyteller" target="_blank" rel="noopener noreferrer">
+        <i class="ri-github-fill"></i>
+    </a>
+</div>
+<script src="js/observer.js"></script>    
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script>
+    const swiper = new Swiper('.campaign-slide', {
+        slidesPerView: 1,
+        spaceBetween: 10,
+        loop: true,
+
+        // Navigation arrows
+        navigation: {
+            nextEl: '.slide-next',
+            prevEl: '.slide-prev',
+        },
+        breakpoints: {
+            640: {
+                slidesPerView: 2,
+                spaceBetween: 20,
+            },
+            768: {
+                slidesPerView: 2,
+                spaceBetween: 40,
+            },
+            1024: {
+                slidesPerView: 3,
+                spaceBetween: 45,
+            },
+        },
+    });
+</script>
 </body>
 </html>
