--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div id="campaigns">
-        <h3>&#9876;&#65039;Campaign&#9876;&#65039;</h3>
+        <h3><img src="img/sword.png" float:left; width="35px"; height="35px">Campaign<img src="img/sword.png" float:right; width="35px"; height="35px"></h3>
         <div class="swiper campaign-slide">
             <div class="swiper-wrapper">
                 <div id="arkemyr" class="swiper-slide slide-card">
@@ -101,38 +101,33 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="campaign-slide-nav">
-        <div class="slide-prev">
-            <i class="ri-arrow-left-line"></i> 
+        <div class="campaign-slide-nav">
+            <div class="slide-prev">
+                <i class="ri-arrow-left-line"></i> 
+            </div>
+            <div class="slide-next">
+                <i class="ri-arrow-right-line"></i>
+            </div>
         </div>
-        <div class="slide-next">
-            <i class="ri-arrow-right-line"></i>
-        </div>
     </div>
-</div>
 
-<div id="newsletter">
-    <div class="newsletter-content">
-        <h3>Get regular updates from us!</h3>
-        <p>Enter your email below to get awesome updates about upcoming events,<br>new campaigns and many more</p>
-        <form action="">
-            <input type="text" placeholder="Email Adress">
-            <button>JOIN</button>
-        </form>
+    <div id="newsletter">
+        <div class="newsletter-content">
+            <h3>Get regular updates from us!</h3>
+            <p>Enter your email below to get awesome updates about upcoming events,<br>new campaigns and many more</p>
+            <form action="">
+                <input type="text" placeholder="Email Adress">
+                <button>JOIN</button>
+            </form>
+        </div>
     </div>
-</div>
-<div id="github">
-    <a href="https://github.com/datia-23/storyteller" target="_blank" rel="noopener noreferrer">
-        <i class="ri-github-fill"></i>
-    </a>
-</div>
-<script src="js/observer.js"></script>    
+
+<!-- <script src="js/observer.js"></script>    
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
     const swiper = new Swiper('.campaign-slide', {
         slidesPerView: 1,
-        spaceBetween: 10,
+        spaceBetween: 3,
         loop: true,
 
         // Navigation arrows
@@ -154,7 +149,8 @@
                 spaceBetween: 45,
             },
         },
-    });
-</script>
+    }); 
+</script> -->
+
 </body>
 </html>
